--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "markdown-editor",
   "version": "1.0.0",
   "description": "Markdown Editor",
-  "main": "src/js/electron/main.js",
+  "main": "src/electron/app.js",
   "scripts": {
     "start": "/Applications/Electron.app/Contents/MacOS/Electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +12,7 @@
   "author": "ghostboyzone",
   "license": "MIT",
   "dependencies": {
+    "gulp": "^4.0.0",
     "markdown-it": "^8.4.2"
   },
   "build": {
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "electron": "^4.0.1",
-    "electron-builder": "^20.38.4"
+    "electron-builder": "^20.38.4",
+    "electron-connect": "^0.6.3"
   }
 }
